--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     let llamadaIniciada = false;
 
     const audios = {
-      inicio: 'intro.mp3',
+      inicio: 'inicio.mp3',
       memoria: 'memoria.mp3',
       territorio: 'territorio.mp3',
       identidad: 'identidad.mp3',
