--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     const player = document.getElementById('audioPlayer');
 
     const audios = {
-      inicio: 'intro.mp3',
+      inicio: 'inicio.mp3',
       memoria: 'memoria.mp3',
       territorio: 'territorio.mp3',
       identidad: 'identidad.mp3',
