--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   img {
     width: 200px;
     margin-top: 20px;
+    cursor: pointer; /* indica que se puede clickear */
   }
 
   p {
@@ -53,7 +54,7 @@
 </head>
 <body>
   <h2>El teléfono está en espera</h2>
-  <img src="nokia.png" alt="Teléfono Nokia">
+  <img src="nokia.png" alt="Teléfono Nokia" onclick="playIntro()">
   <p>Presione un número para continuar.</p>
 
   <div class="keypad">
@@ -78,52 +79,3 @@
       cierre: 'cierre.mp3'
     };
 
-    window.onload = () => {
-      player.src = audios.inicio;
-      player.play();
-
-      // Si no se presiona nada después del intro → cierre
-      setTimeout(() => {
-        if (player.src.includes(audios.inicio)) {
-          player.src = audios.cierre;
-          player.play();
-        }
-      }, 20000);
-    };
-
-    function mark(num) {
-      if (num === 1) {
-        sequence(audios.memoria);
-      } else if (num === 2) {
-        sequence(audios.territorio);
-      } else if (num === 3) {
-        sequence(audios.identidad);
-      } else if (num === 0) {
-        playHuman();
-      } else {
-        sequence(audios.error);
-      }
-    }
-
-    document.addEventListener('keydown', (event) => {
-      if (['0', '1', '2', '3'].includes(event.key)) {
-        mark(parseInt(event.key));
-      }
-    });
-
-    function sequence(audioName) {
-      player.src = audioName;
-      player.play();
-      setTimeout(() => {
-        player.src = audios.error;
-        player.play();
-      }, 5000); // cambia según duración de tus audios
-    }
-
-    function playHuman() {
-      player.src = audios.humano;
-      player.play();
-    }
-  </script>
-</body>
-</html>
